@@ -1,3 +1,11 @@
+2006-12-07  Thomas Hellstrom  <thomas-at-tungstengraphics-dot-com> 
+
+	* unichrome/via_accel.c: (viaAccelDMADownload),
+	(viaExaDownloadFromScreen):
+
+	Reimplement download from screen to something more easily
+	debuggable.
+
 2006-12-06  Jon Nettleton  <jon-dot-nettleton-at-gmail-dot-com>
 
         * unichrome/via_driver.c:
